# tinymusicbox

./: .gitignore  Makefile.am  OLDCODE.c  README.md  configure.ac
default_notes/: hat.note  snare.note  tri.note
src/: Makefile.am  envelope.c  envelope.h  genmusic.c  genmusic.h  gvst.c  gvst.h  noteman.c  noteman.h  pa_player.c  pa_player.h  tinymusicbox.c  tinymusicbox.h  waves.c  waves.h
